Frontend/VillageBase_fe/src/components/ServiceComponents/AddServicePage.module.css
.formTemplate {
}

.inputContainer {
    position: relative;
    margin: 50px auto;
    width: 100%; /*ALKUP. 200px*/
    /* background-color: #f11a1a; */
}

.inputContainer input[type="text"] {
    font-size: 20px;
    width: 100%;
    border: none;
    border-bottom: 2px solid #ccc;
    padding: 5px 0;
    transition: border-color 0.3s;
    outline: none;
}

.inputContainer input[type="text"]:focus {
    border-color: #007bff;
}

.inputContainer label {
    position: absolute;
    top: 0;
    left: 0;
    color: #ccc;
    transition: all 0.3s ease;
    pointer-events: none;
}

.inputContainer input[type="text"]:focus ~ label,
.inputContainer input[type="text"]:valid ~ label {
    top: -20px;
    font-size: 16px;
    color: #333;
}

.inputContainer .underline {
    position: absolute;
    bottom: 0;
    left: 0;
    height: 2px;
    width: 100%;
    background-color: #333;
    transform: scaleX(0);
    transition: all 0.3s ease;
}

.inputContainer input[type="text"]:focus ~ .underline,
.inputContainer input[type="text"]:valid ~ .underline {
    transform: scaleX(1);
}

.addBtn {
    width: 100%;
}

.serviceMaxId:disabled {
    color: black;
}

